# AI_Fianncial_Analysis

./: README.md  pyproject.toml  pytest.ini
config/: logging.yaml  settings.yaml
examples/: ch01_quickcheck_demo.py  ch02_data_pipeline_demo.py  ch03_balance_sheet_demo.py  ch04_income_dupont_demo.py  ch05_cash_dashboard_demo.py  ch06_risk_model_demo.py  ch07_esg_demo.py  ch08_audit_demo.py  ch09_sentiment_demo.py  ch10_event_study_demo.py  ch11_did_demo.py  ch12_causal_demo.py  ch13_knowledge_demo.py  ch14_rag_demo.py  ch15_agent_demo.py  ch16_integration_demo.py
outputs/reports/: ch15_agent_demo_report.md  ch16_api_reference.md  ch16_quickstart.md  ch16_release_manifest.json
scripts/: ch01_quickcheck.py  ch02_data_pipeline.py  ch03_balance_sheet_pipeline.py  ch04_income_dupont_pipeline.py  ch05_cash_dashboard_pipeline.py  ch06_risk_pipeline.py
src/agent/: __init__.py  multi.py  report.py  single.py
src/audit/: __init__.py  extractor.py  parser.py  summarizer.py
src/causal/: __init__.py  did.py  event_study.py  psm.py  rdd.py  robustness.py  types.py
src/data/: __init__.py  ch01_quickcheck.py  cleaner.py  crawler.py  (+1 more)
tests/: test_ch01_quickcheck.py  test_ch02_data_pipeline.py  test_ch03_balance_sheet.py  test_ch04_income_dupont.py  test_ch05_cash_dashboard.py  test_ch06_risk_pipeline.py  test_ch07_esg.py  test_ch08_audit_pipeline.py  test_ch09_sentiment_pipeline.py  test_ch10_event_study.py  test_ch11_did.py  test_ch13_knowledge.py  test_ch14_rag.py  test_ch15_agent_pipeline.py  test_ch16_integration_release.py  test_psm.py  test_rdd.py  test_robustness.py
(+30 files in other folders)
